openshift/etherpad/etherpad-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: etherpad
  name: etherpad
  namespace: etherpad
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: etherpad
    weight: 100
  wildcardPolicy: None
